# Linkedin-Profile-Data-Extraction

./: README.md  pyproject.toml  requirements.txt  run_instructions.txt
src/automating_linkedin_profile_data_extraction_and_analysis/: crew.py  main.py
src/automating_linkedin_profile_data_extraction_and_analysis/config/: agents.yaml  tasks.yaml
src/frontend/: routes.py  run.py
src/frontend/templates/: index.html
