[project]
name = "automating_linkedin_profile_data_extraction_and_analysis"
version = "0.1.0"
description = "automating_linkedin_profile_data_extraction_and_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
automating_linkedin_profile_data_extraction_and_analysis = "automating_linkedin_profile_data_extraction_and_analysis.main:run"
run_crew = "automating_linkedin_profile_data_extraction_and_analysis.main:run"
train = "automating_linkedin_profile_data_extraction_and_analysis.main:train"
replay = "automating_linkedin_profile_data_extraction_and_analysis.main:replay"
test = "automating_linkedin_profile_data_extraction_and_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
